--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 # Configuração do banco de dados
+# spring.application.name=blog
+# spring.datasource.url=jdbc:h2:mem:blog
+# spring.datasource.username=sa
+# spring.datasource.password=admin
+# spring.datasource.enabled=true
+# spring.datasource.driverClassName=org.h2.Driver
+
 spring.application.name=blog
-spring.datasource.url=jdbc:h2:mem:blog
-spring.datasource.username=sa
-spring.datasource.password=admin
-spring.datasource.enabled=true
-spring.datasource.driverClassName=org.h2.Driver
+
+#Configuracao de banco de dados
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbook
+spring.datasource.username=root
+spring.datasource.password=mysqlroot
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
